src/Test/Fixtures/Good/Types/noSpacesParamTypeDeclaration.lf
let theta:Param=param("phi");