src/Test/Fixtures/Bad/Types/unexpectedFloatAfterParamInitializer.lf
let theta: param = Param("theta") 2.34;